[gd_scene load_steps=31 format=3 uid="uid://8jteo7my42mn"]

[ext_resource type="Script" path="res://addons/virtual_camera/Runtime/MainCamera.gd" id="1_iwil1"]
[ext_resource type="Resource" uid="uid://fswp2a3e8v2p" path="res://_Project/Def/Transition_Config.tres" id="2_ujwvp"]
[ext_resource type="Texture2D" uid="uid://bmn1rlq55iq61" path="res://_Project/Images/rotational_camera.png" id="3_rm46m"]
[ext_resource type="Script" path="res://_Project/Scripts/Cameras/PlatformTriggerLookAt.gd" id="4_ql871"]
[ext_resource type="Script" path="res://addons/virtual_camera/Runtime/VirtualCamera.gd" id="5_sr7hp"]
[ext_resource type="PackedScene" uid="uid://c4x0tnkh64x5x" path="res://addons/virtual_camera/Prefabs/LensComponent.tscn" id="6_eemh7"]
[ext_resource type="PackedScene" uid="uid://mgeyvf3veoxk" path="res://addons/virtual_camera/Prefabs/TrackingComponent.tscn" id="7_ihbdn"]
[ext_resource type="Texture2D" uid="uid://dcdlcoc0oct6g" path="res://_Project/Images/fixe_camera.png" id="8_gobwy"]
[ext_resource type="Script" path="res://_Project/Scripts/Cameras/PlatformTrigger.gd" id="9_i2fph"]
[ext_resource type="Resource" uid="uid://djiihqpjk61tv" path="res://_Project/Def/CameraIds/Groups/Group_1.tres" id="10_nrr7s"]
[ext_resource type="Texture2D" uid="uid://sxs6qcnl1nvv" path="res://_Project/Images/FPS_fixed.png" id="11_nubin"]
[ext_resource type="Script" path="res://_Project/Scripts/Cameras/PlatformTriggerFirstPersonFixedRotation.gd" id="12_t8xsy"]
[ext_resource type="Resource" uid="uid://cfdjavj7h5fwq" path="res://_Project/Def/CameraIds/Tags/Tag_1.tres" id="13_lw0ap"]
[ext_resource type="PackedScene" uid="uid://dcb36mswjmwa0" path="res://_Project/Prefabs/PlayerAnimated.tscn" id="14_whbbk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ltd4g"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_i4gs2"]
sky_material = SubResource("ProceduralSkyMaterial_ltd4g")

[sub_resource type="Environment" id="Environment_p1nes"]
background_mode = 2
sky = SubResource("Sky_i4gs2")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_4phwd"]
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_yu2g2"]
custom_solver_bias = 1.0
size = Vector3(50, 0.1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n3ybm"]
albedo_texture = ExtResource("3_rm46m")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjsnx"]
albedo_color = Color(0.305882, 1, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_igw6b"]
material = SubResource("StandardMaterial3D_xjsnx")
size = Vector2(3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wq0mj"]
size = Vector3(3, 1, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pka7c"]
albedo_texture = ExtResource("8_gobwy")

[sub_resource type="BoxShape3D" id="BoxShape3D_au2w7"]
size = Vector3(3, 1, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_55sjg"]
albedo_texture = ExtResource("11_nubin")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wpuei"]
albedo_color = Color(0.733333, 0.611765, 0.188235, 1)

[sub_resource type="BoxMesh" id="BoxMesh_bskhn"]
material = SubResource("StandardMaterial3D_wpuei")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nu2ts"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wtq34"]

[node name="Scene3d" type="Node3D"]

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(0.786709, 0.0782714, -0.612342, 0, 0.991929, 0.126791, 0.617324, -0.099748, 0.78036, -7.85802, 3.6012, 14.092)
current = true
fov = 55.0
script = ExtResource("1_iwil1")
transitionConfig = ExtResource("2_ujwvp")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_p1nes")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1.088, 0, 0, 0, 0.198, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PlaneMesh_4phwd")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
shape = SubResource("BoxShape3D_yu2g2")

[node name="LookAtRotationCameraTrigger" type="MeshInstance3D" parent="." node_paths=PackedStringArray("collisionArea", "virtualCamera")]
transform = Transform3D(1.088, 0, 0, 0, 0.198, 0, 0, 0, 1, -6, 0.033, -1.419)
material_override = SubResource("StandardMaterial3D_n3ybm")
mesh = SubResource("PlaneMesh_igw6b")
script = ExtResource("4_ql871")
collisionArea = NodePath("Area3D")
virtualCamera = NodePath("VirtualCamera_1")

[node name="Area3D" type="Area3D" parent="LookAtRotationCameraTrigger"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LookAtRotationCameraTrigger/Area3D"]
shape = SubResource("BoxShape3D_wq0mj")

[node name="VirtualCamera_1" type="Node3D" parent="LookAtRotationCameraTrigger" node_paths=PackedStringArray("lens", "tracking")]
transform = Transform3D(0.919118, 0, 0, 0, 4.05486, 3.01093, 0, -0.596164, 0.802863, 5.371, 88.8724, 13.5852)
script = ExtResource("5_sr7hp")
enabled = false
lens = NodePath("LensComponent")
tracking = NodePath("TrackingComponent")

[node name="LensComponent" parent="LookAtRotationCameraTrigger/VirtualCamera_1" instance=ExtResource("6_eemh7")]

[node name="TrackingComponent" parent="LookAtRotationCameraTrigger/VirtualCamera_1" instance=ExtResource("7_ihbdn")]

[node name="SubViewport" type="SubViewport" parent="LookAtRotationCameraTrigger"]

[node name="FixedCameraTrigger" type="MeshInstance3D" parent="." node_paths=PackedStringArray("collisionArea", "virtualCamera")]
transform = Transform3D(1.088, 0, 0, 0, 0.198, 0, 0, 0, 1, -1.94796, 0.033, -1.419)
material_override = SubResource("StandardMaterial3D_pka7c")
cast_shadow = 0
mesh = SubResource("PlaneMesh_igw6b")
script = ExtResource("9_i2fph")
collisionArea = NodePath("Area3D_1")
virtualCamera = NodePath("VirtualCamera_4")

[node name="Area3D_1" type="Area3D" parent="FixedCameraTrigger"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FixedCameraTrigger/Area3D_1"]
shape = SubResource("BoxShape3D_au2w7")

[node name="VirtualCamera_4" type="Node3D" parent="FixedCameraTrigger" node_paths=PackedStringArray("lens", "tracking")]
transform = Transform3D(0.723078, 0.0719406, -0.562814, 0, 5.00974, 0.640361, 0.617323, -0.0997481, 0.78036, -5.43204, 18.0212, 15.511)
script = ExtResource("5_sr7hp")
group = ExtResource("10_nrr7s")
lens = NodePath("LensComponent")
tracking = NodePath("TrackingComponent")

[node name="LensComponent" parent="FixedCameraTrigger/VirtualCamera_4" instance=ExtResource("6_eemh7")]
fov = 55.0

[node name="TrackingComponent" parent="FixedCameraTrigger/VirtualCamera_4" instance=ExtResource("7_ihbdn")]

[node name="FixedCameraTrigger2" type="MeshInstance3D" parent="." node_paths=PackedStringArray("collisionArea", "virtualCamera")]
transform = Transform3D(1.088, 0, 0, 0, 0.198, 0, 0, 0, 1, 1.98938, 0.033, -1.419)
material_override = SubResource("StandardMaterial3D_pka7c")
cast_shadow = 0
mesh = SubResource("PlaneMesh_igw6b")
script = ExtResource("9_i2fph")
collisionArea = NodePath("Area3D_2")
virtualCamera = NodePath("VirtualCamera_5")

[node name="Area3D_2" type="Area3D" parent="FixedCameraTrigger2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FixedCameraTrigger2/Area3D_2"]
shape = SubResource("BoxShape3D_au2w7")

[node name="VirtualCamera_5" type="Node3D" parent="FixedCameraTrigger2" node_paths=PackedStringArray("lens", "tracking")]
transform = Transform3D(0.798092, -0.0696505, 0.450528, 0, 4.99121, 0.771629, -0.495998, -0.132665, 0.85813, 5.67012, 17.477, 13.6291)
script = ExtResource("5_sr7hp")
enabled = false
group = ExtResource("10_nrr7s")
lens = NodePath("../../FixedCameraTrigger/VirtualCamera_4/LensComponent")
tracking = NodePath("../../FixedCameraTrigger/VirtualCamera_4/TrackingComponent")

[node name="LensComponent" parent="FixedCameraTrigger2/VirtualCamera_5" instance=ExtResource("6_eemh7")]

[node name="TrackingComponent" parent="FixedCameraTrigger2/VirtualCamera_5" instance=ExtResource("7_ihbdn")]

[node name="FirstPersonFixedRotationCameraTrigger" type="MeshInstance3D" parent="." node_paths=PackedStringArray("collisionArea", "virtualCamera")]
transform = Transform3D(1.088, 0, 0, 0, 0.198, 0, 0, 0, 1, 6.1461, 0.033, -1.419)
material_override = SubResource("StandardMaterial3D_55sjg")
mesh = SubResource("PlaneMesh_igw6b")
script = ExtResource("12_t8xsy")
collisionArea = NodePath("Area3D")
virtualCamera = NodePath("VirtualCamera_3")

[node name="Area3D" type="Area3D" parent="FirstPersonFixedRotationCameraTrigger"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FirstPersonFixedRotationCameraTrigger/Area3D"]
shape = SubResource("BoxShape3D_wq0mj")

[node name="VirtualCamera_3" type="Node3D" parent="FirstPersonFixedRotationCameraTrigger" node_paths=PackedStringArray("lens", "tracking")]
transform = Transform3D(0.999999, 0, 0, 0, 5.04409, 0, 0, 0, 0.918317, -5.88692, 8.71769, 11.0016)
script = ExtResource("5_sr7hp")
enabled = false
tag = ExtResource("13_lw0ap")
lens = NodePath("LensComponent")
tracking = NodePath("TrackingComponent")

[node name="LensComponent" parent="FirstPersonFixedRotationCameraTrigger/VirtualCamera_3" instance=ExtResource("6_eemh7")]

[node name="TrackingComponent" parent="FirstPersonFixedRotationCameraTrigger/VirtualCamera_3" instance=ExtResource("7_ihbdn")]
rotationControl = 2

[node name="Block" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01851, 0, 5.04211)
mesh = SubResource("BoxMesh_bskhn")

[node name="StaticBody3D" type="StaticBody3D" parent="Block"]
physics_material_override = SubResource("PhysicsMaterial_nu2ts")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Block/StaticBody3D"]
shape = SubResource("BoxShape3D_wtq34")

[node name="PlayerAnimated" parent="." instance=ExtResource("14_whbbk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.71387)

[node name="torso" parent="PlayerAnimated/Character/character2/root" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, -1.80478e-15, 0.17625, -0.02375)

[editable path="PlayerAnimated"]
[editable path="PlayerAnimated/Character"]
