[gd_scene load_steps=3 format=3 uid="uid://2m1k1y4s5cpn"]

[ext_resource type="Script" path="res://addons/virtual_camera/Runtime/VirtualCamera.gd" id="1_qcf8h"]
[ext_resource type="Script" path="res://addons/virtual_camera/Runtime/Components/LensComponent.gd" id="2_56o56"]

[node name="VirtualCamera" type="Node3D" node_paths=PackedStringArray("lens")]
script = ExtResource("1_qcf8h")
lens = NodePath("LensComponent")

[node name="LensComponent" type="Node" parent="."]
script = ExtResource("2_56o56")
